@@ -4,8 +4,8 @@ import life.catalogue.api.model.ParserConfig;
 import life.catalogue.api.model.VerbatimRecord;
 import life.catalogue.api.vocab.DataFormat;
 import life.catalogue.api.vocab.MatchType;
-import life.catalogue.importer.neo.model.NeoUsage;
-import life.catalogue.importer.neo.model.RankedUsage;
+import life.catalogue.importer.store.model.UsageData;
+import life.catalogue.importer.store.model.RankedUsage;
 import life.catalogue.junit.PgSetupRule;
 import life.catalogue.parser.NameParser;
 
@@ -15,10 +15,11 @@ import org.gbif.nameparser.api.NomCode;
 import org.gbif.nameparser.api.Rank;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.ClassRule;
 import org.junit.Test;
-import org.neo4j.graphdb.Transaction;
+
 
 import static org.junit.Assert.*;
 
@@ -37,21 +38,19 @@ public class NormalizerTxtTreeIT extends NormalizerITBase {
   @Test
   public void mammalia() throws Exception {
     normalize(0);
-    store.dump();
-    try (Transaction tx = store.getNeo().beginTx()) {
-      NeoUsage s = usageByID("13");
-      assertTrue(s.isSynonym());
-      assertEquals("Pardina", s.usage.getName().getLabel());
-  
-      NeoUsage t = usageByID("12");
-      assertFalse(t.isSynonym());
-      assertEquals("Lynx", t.usage.getName().getLabel());
+    store.debug();
+    UsageData s = usageByID("13");
+    assertTrue(s.isSynonym());
+    assertEquals("Pardina", s.usage.getLabel());
 
-      List<RankedUsage> accs = store.accepted(s.node);
-      assertEquals(1, accs.size());
-      assertEquals(t.node, accs.get(0).usageNode);
-      assertEquals(t.usage.getName().getLabel(), accs.get(0).name);
-    }
+    UsageData t = usageByID("12");
+    assertFalse(t.isSynonym());
+    assertEquals("Lynx", t.usage.getLabel());
+
+    var accs = store.usages().accepted(s).stream().map(store::nameUsage).toList();
+    assertEquals(1, accs.size());
+    assertEquals(t.getId(), accs.getFirst().ud.getId());
+    assertEquals(t.usage.getLabel(), accs.getFirst().nd.getName().getLabel());
   }
 
   public static ParserConfig aspilotaCfg(){
@@ -69,14 +68,12 @@ public class NormalizerTxtTreeIT extends NormalizerITBase {
   @Test
   public void californicum() throws Exception {
     normalize(2);
-    store.dump();
-    try (Transaction tx = store.getNeo().beginTx()) {
-      NeoUsage u = usageByID("14");
-      assertTrue(u.isSynonym());
-      assertEquals("? californicum Torr. & A.Gray", u.usage.getName().getLabel());
-      assertEquals(MatchType.NONE, u.usage.getName().getNamesIndexType());
-      assertNull(u.usage.getName().getNamesIndexId());
-    }
+    store.debug();
+    UsageData u = usageByID("14");
+    assertTrue(u.isSynonym());
+    assertEquals("? californicum Torr. & A.Gray", u.usage.getName().getLabel());
+    assertEquals(MatchType.NONE, u.usage.getName().getNamesIndexType());
+    assertNull(u.usage.getName().getNamesIndexId());
   }
 
   @Test
@@ -87,18 +84,16 @@ public class NormalizerTxtTreeIT extends NormalizerITBase {
     NameParser.PARSER.configs().add(pcfg.getScientificName(), pcfg.getAuthorship(), pcfg.toParsedName());
 
     normalize(3);
-    store.dump();
-    try (Transaction tx = store.getNeo().beginTx()) {
-      NeoUsage u = usageByID("8");
-      assertFalse(u.isSynonym());
-      assertEquals("Aspilota vector Belokobylskij, 2007", u.usage.getName().getLabel());
-      assertEquals(NameType.SCIENTIFIC, u.usage.getName().getType());
-      assertEquals("Aspilota", u.usage.getName().getGenus());
-      assertEquals("vector", u.usage.getName().getSpecificEpithet());
+    store.debug();
+    UsageData u = usageByID("8");
+    assertFalse(u.isSynonym());
+    assertEquals("Aspilota vector Belokobylskij, 2007", u.usage.getName().getLabel());
+    assertEquals(NameType.SCIENTIFIC, u.usage.getName().getType());
+    assertEquals("Aspilota", u.usage.getName().getGenus());
+    assertEquals("vector", u.usage.getName().getSpecificEpithet());
 
-      VerbatimRecord v = store.getVerbatim(u.getVerbatimKey());
-      assertEquals(0, v.getIssues().size());
-    }
+    VerbatimRecord v = store.getVerbatim(u.getVerbatimKey());
+    assertEquals(0, v.getIssues().size());
   }
 
 }
